--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0-alpha.1",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "terrafile": "./index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
