--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "terrafile": "./index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/xascode/terrafile#readme",
   "dependencies": {
-    "commander": "^7.2.0"
+    "commander": "^7.2.0",
+    "jest": "^26.6.3"
   }
 }
