--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "terrafile": "./index.js"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --reporters=jest-simple-dot-reporter"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "dependencies": {
     "commander": "^7.2.0",
     "jest": "^26.6.3"
+  },
+  "devDependencies": {
+    "jest-simple-dot-reporter": "^1.0.5"
   }
 }
