Fix action step can only have one name.

--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -23,8 +23,7 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Test ${{ matrix.test_number }}
-    - name: Run the tests
+    - name: Test ${{ matrix.test_number }}s
       run: npm test -- --coverage
 
     - name: Coveralls Parallel
