--- a/.github/workflows/codeclimate.yaml
+++ b/.github/workflows/codeclimate.yaml
@@ -16,8 +16,9 @@ jobs:
       with:
         node-version: ${{ matrix.node }}
     - run: npm install
-    - uses: paambaati/codeclimate-action@v2.2.4
+    - uses: paambaati/codeclimate-action@v2.7.5
       env:
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
-        coverageCommand: npm test
+        coverageCommand: npm test -- --coverage
+        coverageLocations: ${{github.workspace}}/coverage/lcov.info:lcov
