Add code climate badges and fix typo in github action for cc.

--- a/.github/workflows/codeclimate.yaml
+++ b/.github/workflows/codeclimate.yaml
@@ -3,7 +3,7 @@ name: CodeClimate Coverage
 on: [push, pull_request]
 
 jobs:
-  coverate:
+  coverage:
     strategy:
       matrix:
         platform: [ ubuntu-latest ]
