--- a/.github/workflows/codacy.yaml
+++ b/.github/workflows/codacy.yaml
@@ -12,6 +12,9 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Update npm
+        run: npm install -g npm@latest
+
       - name: Install dependencies
         run: npm install
 
