--- a/.github/workflows/codacy.yaml
+++ b/.github/workflows/codacy.yaml
@@ -13,7 +13,7 @@ jobs:
           fetch-depth: 2
 
       - name: Update npm
-        run: npm install -g npm@latest
+        run: sudo npm install -g npm@latest
 
       - name: Install dependencies
         run: npm install
