--- a/.github/workflows/codacy.yaml
+++ b/.github/workflows/codacy.yaml
@@ -15,6 +15,9 @@ jobs:
       - name: Update npm
         run: sudo npm install -g npm@latest
 
+      - name: Unset _auth
+        run: npm config delete _auth
+
       - name: Install dependencies
         run: npm ci
 
