--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "terrafile": "./index.js"
+    "terrafile": "./src/terrafile.js"
   },
   "scripts": {
     "test": "jest --reporters=jest-simple-dot-reporter"
