tell snyk github action to continue on error, we want it to upload the issues to GitHub Code Scanning.

--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -6,6 +6,8 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Run Snyk to check for vulnerabilities
+      # Upload the issues to GitHub Code Scanning
+      continue-on-error: true
       uses: snyk/actions/node@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
