--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "terrafile": "./src/terrafile.js"
   },
   "scripts": {
-    "test": "jest --reporters=jest-simple-dot-reporter"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,13 +21,14 @@
   "homepage": "https://github.com/xascode/terrafile#readme",
   "dependencies": {
     "commander": "^7.2.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "jest-progress-bar-reporter": "^1.0.20",
+    "mkdirp": "^0.5.5"
   },
   "devDependencies": {
     "@jestaubach/eslint-config": "^0.0.1",
     "codecov": "^3.8.1",
     "coveralls": "^3.1.0",
-    "eslint": "^7.23.0",
-    "jest-simple-dot-reporter": "^1.0.5"
-  } 
+    "eslint": "^7.23.0"
+  }
 }
