--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "commander": "^7.2.0",
     "jest": "^26.6.3",
     "jest-progress-bar-reporter": "^1.0.20",
-    "mkdirp": "^0.5.5"
+    "mkdirp": "^0.5.5",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@jestaubach/eslint-config": "^0.0.1",
