remove --coverage since coverage specified in config.

--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -24,7 +24,7 @@ jobs:
       run: npm install
 
     - name: Test ${{ matrix.node-version }}s
-      run: npm test -- --coverage
+      run: npm test
 
     - name: Coveralls Parallel
       uses: coverallsapp/github-action@master
