--- a/.github/workflows/codacy.yaml
+++ b/.github/workflows/codacy.yaml
@@ -16,7 +16,7 @@ jobs:
         run: npm install
 
       - name: Test ${{ matrix.test_number }}s
-        run: npm test -- --coverage
+        run: npm test
 
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@master
