--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jest": "^26.6.3",
     "jest-progress-bar-reporter": "^1.0.20",
     "mkdirp": "^1.0.4",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "touch": "^3.1.0"
   },
   "devDependencies": {
     "@jestaubach/eslint-config": "^0.0.1",
