--- a/terrafile.json.sample
+++ b/terrafile.json.sample
@@ -1,10 +1,17 @@
 {
   "xascode-sample": {
-    "source": "https://github.com/xascode-terraform/modules/sample",
+    "source": "https://github.com/xascode/terraform-modules.git",
     "version": "1.0.0"
   },
   "xascode-sample2": {
-    "source": "https://github.com/xascode/modules/sample",
+    "source": "git@github.com/xascode/terraform-modules.git",
     "version": "main"
+  },
+  "xascode-sample3": {
+    "source": "./vendor/modules/terraform-modules"
+  },
+  "xascode-sample4": {
+    "source": "xascode/terraform-modules",
+    "version": "1.0.0"
   }
 }
