--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/xascode/terrafile#readme",
   "dependencies": {
     "commander": "^7.2.0",
+    "fs-extra": "^9.1.0",
     "jest": "^26.6.3",
     "jest-progress-bar-reporter": "^1.0.20",
     "mkdirp": "^1.0.4",
