--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/xascode/terrafile#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "commander": "^7.2.0",
     "fs-extra": "^9.1.0",
     "jest": "^26.6.3",
