--- a/package.json
+++ b/package.json
@@ -35,9 +35,15 @@
   },
   "devDependencies": {
     "@jestaubach/eslint-config": "^0.0.1",
+    "@types/fs-extra": "^9.0.11",
+    "@types/mkdirp": "^1.0.1",
+    "@types/rimraf": "^3.0.0",
+    "@types/touch": "^3.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "codecov": "^3.8.1",
     "coveralls": "^3.1.0",
-    "eslint": "^7.23.0",
+    "eslint": "^7.25.0",
     "husky": "^6.0.0",
     "lint-staged": "^9.4.3",
     "prettier-standard": "^16.4.1"
