--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
     "moduleResolution": "node",
     "pretty": true,
     "sourceMap": true,
-    "target": "es6",
+    "target": "es5",
     "resolveJsonModule": true,
     "outDir": "./dist",
     "noImplicitAny": true,
+    "esModuleInterop": true
 },
   "include": [
     "**/*.ts"
