--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0-alpha.1",
   "description": "",
   "main": "index.js",
+  "types": "src/types.d.ts",
   "bin": {
-    "terrafile": "./dist/terrafile.js"
+    "terrafile": "./dist/terrafile"
   },
   "scripts": {
-    "test": "jest",
+    "test": "npm run build && jest",
     "build": "tsc",
     "install": "npm run build",
     "format": "prettier-standard '**/*.ts'"
@@ -26,7 +27,6 @@
     "axios": "^0.21.1",
     "commander": "^7.2.0",
     "fs-extra": "^9.1.0",
-    "jest": "^26.6.3",
     "jest-progress-bar-reporter": "^1.0.20",
     "mkdirp": "^1.0.4",
     "rimraf": "^3.0.2",
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@jestaubach/eslint-config": "^0.0.1",
     "@types/fs-extra": "^9.0.11",
+    "@types/jest": "^26.0.23",
     "@types/mkdirp": "^1.0.1",
     "@types/rimraf": "^3.0.0",
     "@types/touch": "^3.1.1",
@@ -45,8 +46,11 @@
     "coveralls": "^3.1.0",
     "eslint": "^7.25.0",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "lint-staged": "^9.4.3",
-    "prettier-standard": "^16.4.1"
+    "prettier-standard": "^16.4.1",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.2.4"
   },
   "lint-staged": {
     "linters": {
