--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,15 @@
     "esModuleInterop": true
 },
   "include": [
-    "**/*.ts"
+    "**/*.ts", "node_modules/@types"
   ],
   "exclude": [
     "node_modules", "__tests__/**/*.ts"
+  ],
+  "typeRoots": [
+    "node_modules/@types"
+  ],
+  "types": [
+    "jest"
   ]
 }
