--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "terrafile",
   "version": "0.1.0-alpha.1",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/terrafile.ts",
   "types": "src/types.d.ts",
   "bin": {
     "terrafile": "./dist/terrafile"
@@ -50,6 +50,7 @@
     "lint-staged": "^9.4.3",
     "prettier-standard": "^16.4.1",
     "ts-jest": "^26.5.6",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "lint-staged": {
