--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0-alpha.1",
   "description": "",
   "main": "./dist/terrafile.ts",
-  "types": "src/types.d.ts",
+  "typings": "src/index",
   "bin": {
     "terrafile": "./dist/terrafile"
   },
