--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "jest-progress-bar-reporter": "^1.0.20",
     "mkdirp": "^1.0.4",
     "rimraf": "^3.0.2",
-    "touch": "^3.1.0",
-    "tsc": "^1.20150623.0"
+    "touch": "^3.1.0"
   },
   "devDependencies": {
     "@jestaubach/eslint-config": "^0.0.1",
@@ -50,6 +49,7 @@
     "prettier-standard": "^16.4.1",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
+    "tsc": "^2.0.3",
     "typescript": "^4.2.4"
   },
   "lint-staged": {
