--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "npm run build && jest",
     "build": "tsc",
     "install": "npm run build",
-    "format": "prettier-standard '**/*.ts'"
+    "format": "prettier-standard '**/*.ts'",
+    "check-eslint-config": "eslint --print-config . | eslint-config-prettier-check",
+    "check-code": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -37,32 +39,34 @@
     "@types/mkdirp": "^1.0.1",
     "@types/rimraf": "^3.0.0",
     "@types/touch": "^3.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.22.1",
     "codecov": "^3.8.1",
     "coveralls": "^3.1.0",
-    "eslint": "^7.26.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.23.1",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jest-progress-bar-reporter": "^1.0.21",
-    "lint-staged": "^9.4.3",
+    "lint-staged": "^11.0.0",
     "prettier-standard": "^15.0.1",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tsc": "^2.0.3",
     "typescript": "^4.2.4"
   },
-  "lint-staged": {
-    "linters": {
-      "**/*.ts": [
-        "prettier-standard",
-        "git add"
-      ]
-    }
-  },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn check-eslint-config && yarn check-code"
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
