--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,8 @@
     "@typescript-eslint/quotes": "off",
     "quotes": ["error", "backtick"],
     "no-restricted-syntax": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-multi-spaces": ["error", { "ignoreEOLComments": true }]
   },
   "overrides": [
     {
