--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "jest": "^26.6.3",
     "jest-progress-bar-reporter": "^1.0.21",
     "lint-staged": "^11.0.0",
+    "prettier": "^2.3.0",
+    "prettier-eslint": "^12.0.0",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tsc": "^2.0.3",
