--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "paths": {
       "src/*": ["./src/*"],
       "__tests__/*": ["./__tests__/*"],
-      "__mocks__/*": ["./__mocks__/*"],
+      "__mocks__/*": ["__mocks__/*"],
       "/*": ["./*"]
     }
   },
