--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "terrafile": "./dist/terrafile"
   },
   "scripts": {
-    "test": "npm run build && tscpaths -p tsconfig.json -s ./ -o ./dist && jest",
+    "test": "npm run build && tscpaths -p tsconfig.json -s ./ -o ./dist && jest --filter=\"./dist/__tests__/testUtils/testFilter.js\"",
+    "test-all": "npm run test -- --skipFilter",
     "build": "tsc",
     "install": "npm run build",
     "lint": "eslint src"
