--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "commander": "^7.2.0",
+    "fast-glob": "^3.2.5",
     "fs-extra": "^9.1.0",
     "mkdirp": "^1.0.4",
     "rimraf": "^3.0.2",
@@ -38,20 +39,20 @@
     "@types/mkdirp": "^1.0.1",
     "@types/rimraf": "^3.0.0",
     "@types/touch": "^3.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "codecov": "^3.8.1",
     "coveralls": "^3.1.0",
-    "eslint": "^7.2.0",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
     "jest-progress-bar-reporter": "^1.0.21",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.1",
     "prettier-eslint": "^12.0.0",
-    "ts-jest": "^27.0.2",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "tscpaths": "^0.0.9",
     "typescript": "^4.3.2"
