--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terrafile",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0",
   "description": "",
   "main": "./dist/terrafile.ts",
   "bin": {
