--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "npm run build && tscpaths -p tsconfig.json -s ./ -o ./dist && jest --filter=\"./dist/__tests__/testUtils/testFilter.js\"",
     "test-all": "npm run test -- --skipFilter",
     "build": "tsc",
-    "install": "npm run build",
+    "postinstall": "npm run build",
     "lint": "eslint src",
     "bump": "npm version patch",
     "bump-minor": "npm version minor",
