--- a/package.json
+++ b/package.json
@@ -2,19 +2,16 @@
   "name": "terrafile",
   "version": "0.1.6",
   "description": "",
-  "main": "./dist/cli/terrafile.ts",
+  "main": "dist/cli/terrafile.ts",
   "bin": {
-    "terrafile": "./dist/cli/terrafile"
+    "terrafile": "dist/cli/terrafile"
   },
   "scripts": {
     "test": "npm run build && tscpaths -p tsconfig.json -s ./ -o ./dist && jest --filter=\"./dist/__tests__/testUtils/testFilter.js\"",
     "test-all": "npm run test -- --skipFilter",
     "build": "tsc",
-    "postinstall": "npm run build",
     "lint": "eslint src",
     "bump": "npm version patch",
-    "bump-minor": "npm version minor",
-    "bump-major": "npm version major",
     "release": "git push --tags && npm publish"
   },
   "repository": {
