allow breaks in curly braces less than 6 if consistent

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,7 @@
     "comma-dangle": ["error", "always-multiline"],
     "@typescript-eslint/function-paren-newline": "off",
     "function-paren-newline": ["error", "multiline-arguments"],
-    "object-curly-newline": ["error", { "ImportDeclaration": { "minProperties": 6 } }],
+    "object-curly-newline": ["error", { "ImportDeclaration": { "minProperties": 6, "consistent": true } }],
     "@typescript-eslint/operator-linebreak": "off",
     "operator-linebreak": ["error", "after", { "overrides": { "?": "before", ":": "before" } }],
     "newline-per-chained-call": "off",
