--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,9 @@
     "operator-linebreak": ["error", "after", { "overrides": { "?": "before", ":": "before" } }],
     "newline-per-chained-call": "off",
     "@typescript-eslint/indent": "off",
-    "indent": ["error", 2, { "offsetTernaryExpressions": true}]
+    "indent": ["error", 2, { "offsetTernaryExpressions": true, "SwitchCase": 1}],
+    "@typescript-eslint/implicit-arrow-linebreak": "off",
+    "implicit-arrow-linebreak": ["error", "below"] 
   },
   "overrides": [
     {
