--- a/.eslintrc
+++ b/.eslintrc
@@ -37,7 +37,7 @@
     "@typescript-eslint/arrow-body-style": "off",
     "arrow-body-style": ["error", "always"],
     "@typescript-eslint/no-unused-vars": "off",
-    "no-unused-vars": ["error", { "varsIgnorePattern": "^_" }]
+    "no-unused-vars": ["error", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }]
   },
   "overrides": [
     {
