--- a/.eslintrc
+++ b/.eslintrc
@@ -19,17 +19,16 @@
     "max-len": ["error", { "code": 120 }],
     "@typescript-eslint/quotes": "off",
     "quotes": ["error", "backtick"],
-    "no-restricted-syntax": "off",
-    "import/prefer-default-export": "off",
+    "@typescript-eslint/no-multi-spaces": "off",
     "no-multi-spaces": ["error", { "ignoreEOLComments": true }],
     "@typescript-eslint/comma-dangle": "off",
     "comma-dangle": ["error", "always-multiline"],
     "@typescript-eslint/function-paren-newline": "off",
     "function-paren-newline": ["error", "multiline-arguments"],
+    "@typescript-eslint/object-curly-newline": "off",
     "object-curly-newline": ["error", { "ImportDeclaration": { "minProperties": 6, "consistent": true } }],
     "@typescript-eslint/operator-linebreak": "off",
     "operator-linebreak": ["error", "after", { "overrides": { "?": "before", ":": "before" } }],
-    "newline-per-chained-call": "off",
     "@typescript-eslint/indent": "off",
     "indent": ["error", 2, { "offsetTernaryExpressions": true, "SwitchCase": 1}],
     "@typescript-eslint/implicit-arrow-linebreak": "off",
@@ -37,7 +36,10 @@
     "@typescript-eslint/arrow-body-style": "off",
     "arrow-body-style": ["error", "always"],
     "@typescript-eslint/no-unused-vars": "off",
-    "no-unused-vars": ["error", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }]
+    "no-unused-vars": ["error", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
+    "no-restricted-syntax": "off",
+    "import/prefer-default-export": "off",
+    "newline-per-chained-call": "off"
   },
   "overrides": [
     {
