--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-json": "^3.0.0",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
     "jest-progress-bar-reporter": "^1.0.21",
