--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
   ],
   "extends": [
     "airbnb-typescript/base",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:json/recommended"
   ],
   "rules": {
     "@typescript-eslint/max-len": "off",
