--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "terrafile": "./dist/src/cli/terrafile.js"
   },
   "scripts": {
-    "test": "npm run build && tscpaths -p tsconfig.json -s ./ -o ./dist && jest --filter=\"./dist/__tests__/testUtils/testFilter.js\"",
+    "test": "npm run build && jest --filter=\"./dist/__tests__/testUtils/testFilter.js\"",
     "test-all": "npm run test -- --skipFilter",
-    "build": "tsc",
+    "build": "tsc && tscpaths -p tsconfig.json -s ./ -o ./dist",
     "lint": "eslint src",
     "bump": "npm version patch",
     "release": "git push --tags && npm publish"
