--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   },
   "homepage": "https://github.com/XasCode/terrafile#readme",
   "dependencies": {
+    "@jestaubach/cloner-git": "^0.1.5",
+    "@jestaubach/fetcher-axios": "^0.1.4",
+    "@jestaubach/fs-helpers": "^0.2.8",
     "axios": "^0.25.0",
-    "chalk": "^5.0.0",
+    "chalk": "^4.1.2",
     "fast-glob": "^3.2.11",
     "fs-extra": "^10.0.0",
     "mkdirp": "^1.0.4",
@@ -40,25 +43,26 @@
     "@types/mkdirp": "^1.0.2",
     "@types/rimraf": "^3.0.2",
     "@types/touch": "^3.1.2",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "@xascode/tscpaths": "^0.1.4",
     "codecov": "^3.8.3",
-    "commander": "^8.3.0",
+    "commander": "^9.0.0",
     "coveralls": "^3.1.1",
-    "eslint": "^8.7.0",
+    "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-plugin-json": "^3.1.0",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
     "jest-progress-bar-reporter": "^1.0.21",
-    "lint-staged": "^12.2.0",
+    "lint-staged": "^12.3.2",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
+    "strip-ansi": "^7.0.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "husky": {
     "hooks": {
