--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "@jestaubach/terrafile",
   "version": "0.1.28",
   "description": "",
-  "main": "./dist/src/cli/terrafile.js",
+  "type": "commonjs",
+  "main": "./dist/terrafile.js",
+  "module": "./dist/terrafile.mjs",
+  "types": "./dist/cli/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "bin": {
-    "terrafile": "./dist/src/cli/terrafile.js"
+    "terrafile": "./dist/terrafile.js"
   },
   "scripts": {
-    "test": "npm run build && jest --filter=\"./dist/__tests__/testUtils/testFilter.js\"",
-    "test-all": "npm run test -- --skipFilter",
-    "build": "tsc && tscpaths -p tsconfig.json -s ./ -o ./dist -v",
-    "lint": "eslint src",
-    "bump": "npm version patch",
-    "release": "git push --tags && npm publish"
+    "build": "tsc && vite build",
+    "test": "vitest run --coverage --reporter dot",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -28,7 +31,7 @@
     "@jestaubach/cloner-git": "^0.1.12",
     "@jestaubach/fetcher-axios": "^0.1.7",
     "@jestaubach/fs-helpers": "^0.2.14",
-    "@jestaubach/terrafile-backend-lib": "^0.1.3",
+    "@jestaubach/terrafile-backend-lib": "^0.1.4",
     "axios": "^0.27.2",
     "chalk": "^4.1.2",
     "commander": "^9.4.0",
@@ -41,29 +44,30 @@
   "devDependencies": {
     "@jestaubach/eslint-config": "^0.1.13",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^28.1.6",
+    "@types/lodash": "^4.14.195",
     "@types/mkdirp": "^1.0.2",
     "@types/rimraf": "^3.0.2",
     "@types/touch": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
-    "@xascode/tscpaths": "^0.1.4",
+    "@vitest/coverage-istanbul": "^0.32.2",
+    "builtin-modules": "^3.3.0",
     "codecov": "^3.8.3",
-    "coveralls": "^3.1.1",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-json": "^3.1.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.3",
-    "jest-progress-bar-reporter": "^1.0.25",
     "lint-staged": "^13.0.3",
+    "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "strip-ansi": "^7.0.1",
-    "ts-jest": "^28.0.7",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vite": "^4.3.9",
+    "vite-plugin-commonjs-externals": "^0.1.3",
+    "vite-plugin-dts": "^2.3.0",
+    "vitest": "^0.32.2"
   },
   "husky": {
     "hooks": {
