--- a/package.json
+++ b/package.json
@@ -33,13 +33,18 @@
     "@jestaubach/fs-helpers": "^0.2.14",
     "@jestaubach/terrafile-backend-lib": "^0.1.4",
     "axios": "^0.27.2",
+    "builtin-modules": "^3.3.0",
     "chalk": "^4.1.2",
     "commander": "^9.4.0",
     "fast-glob": "^3.2.11",
     "fs-extra": "^10.1.0",
+    "lodash": "^4.17.21",
     "mkdirp": "^1.0.4",
     "rimraf": "^3.0.2",
-    "touch": "^3.1.0"
+    "touch": "^3.1.0",
+    "vite": "^4.3.9",
+    "vite-plugin-commonjs-externals": "^0.1.3",
+    "vite-plugin-dts": "^2.3.0"
   },
   "devDependencies": {
     "@jestaubach/eslint-config": "^0.1.13",
@@ -48,25 +53,20 @@
     "@types/mkdirp": "^1.0.2",
     "@types/rimraf": "^3.0.2",
     "@types/touch": "^3.1.2",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "@vitest/coverage-istanbul": "^0.32.2",
-    "builtin-modules": "^3.3.0",
     "codecov": "^3.8.3",
-    "eslint": "^8.21.0",
+    "eslint": "^8.43.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-json": "^3.1.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "strip-ansi": "^7.0.1",
-    "typescript": "^4.7.4",
-    "vite": "^4.3.9",
-    "vite-plugin-commonjs-externals": "^0.1.3",
-    "vite-plugin-dts": "^2.3.0",
+    "typescript": "^4.9.5",
     "vitest": "^0.32.2"
   },
   "husky": {
