--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-json": "^3.1.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
