--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import-typescript": "^0.0.4",
     "eslint-plugin-json": "^3.1.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
