--- a/.github/workflows/codacy.yaml
+++ b/.github/workflows/codacy.yaml
@@ -15,6 +15,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Build ${{ matrix.test_number }}s
+        run: npm run build
+
       - name: Test ${{ matrix.test_number }}s
         run: npm test
 
