--- a/.github/workflows/codeclimate.yaml
+++ b/.github/workflows/codeclimate.yaml
@@ -21,5 +21,5 @@ jobs:
       env:
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
-        coverageCommand: npm test -- --coverage
+        coverageCommand: npm test
         coverageLocations: ${{github.workspace}}/coverage/lcov.info:lcov
