--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,9 @@ sonar.sourceEncoding=UTF-8
 
 # LCOV report path
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+
+# Include test subdirectories in test scope
+sonar.test.inclusions = __tests__/**/*.spec.ts
+
+# Exclude test subdirectories from source scope
+sonar.exclusions = __tests__/**/*.spec.ts
