scope tests for SonarCloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # Include test subdirectories in test scope
-sonar.test.inclusions = __tests__/**/*.spec.ts
+sonar.test.inclusions = **/__tests__/**/*.spec.ts
 
 # Exclude test subdirectories from source scope
-sonar.exclusions = __tests__/**/*.spec.ts
+sonar.exclusions = **/__tests__/**/*.spec.ts
