scope tests for SonarCloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,7 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
+sonar.tests=__tests__/
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
@@ -15,7 +16,7 @@ sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # Include test subdirectories in test scope
-sonar.test.inclusions=**/__tests__/**/*.spec.ts
+sonar.test.inclusions=**/*.spec.ts
 
 # Exclude test subdirectories from source scope
-sonar.exclusions=**/__tests__/**/*.spec.ts,vite.config.ts,__tests__/testUtils/testSetupFile.ts
+sonar.exclusions=**/*.spec.ts,vite.config.ts,__tests__/testUtils/testSetupFile.ts
