scope tests for SonarCloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,7 +16,7 @@ sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # Include test subdirectories in test scope
-sonar.test.inclusions=**/*.spec.ts
+sonar.test.inclusions=**/*.spec.ts,**/*.*.spec.ts
 
 # Exclude test subdirectories from source scope
 sonar.exclusions=**/*.spec.ts,vite.config.ts,__tests__/testUtils/testSetupFile.ts
