--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,17 +6,10 @@ sonar.projectName=terrafile
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.
-sonar.tests=__tests__/
+sonar.sources=src/
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
 # LCOV report path
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-
-# Include test subdirectories in test scope
-sonar.test.inclusions=**/*.spec.ts,**/*.*.spec.ts
-
-# Exclude test subdirectories from source scope
-sonar.exclusions=**/*.spec.ts,vite.config.ts,__tests__/testUtils/testSetupFile.ts
