--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,10 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=src/
+sonare.exclusions=src/**/__tests__/**
+
+sonar.tests=src/
+sonar.test.inclusions=src/**/*.spec.ts
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
