scope tests for SonarCloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=src/
-sonar.exclusions=src/**/__tests__/**,src/**/__tests__/
+sonar.exclusions=src/**/__tests__/**
 
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.spec.ts
