--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "builtin-modules": "^3.3.0",
     "chalk": "^4.1.2",
     "commander": "^9.4.0",
+    "crypto": "^1.0.1",
     "fast-glob": "^3.2.11",
     "fs-extra": "^10.1.0",
     "lodash": "^4.17.21",
