--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "lodash": "^4.17.21",
     "vite": "^4.3.9",
     "vite-plugin-commonjs-externals": "^0.1.3",
-    "vite-plugin-dts": "^2.3.0",
-    "vitest": "^0.32.2"
+    "vite-plugin-dts": "^2.3.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
@@ -55,7 +54,8 @@
     "fs-extra": "^11.1.1",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vitest": "^0.32.2"
   },
   "husky": {
     "hooks": {
