try to sink up sonar coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,8 @@ sonar.projectName=terrafile
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=src/
-sonar.exclusions=src/**/__tests__/**
+sonar.sources=/
+sonar.exclusions=src/**/__tests__/**,node_modules/**,coverage/**,dist/**
 
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.spec.ts
