try to sink up sonar coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=terrafile
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=/
+sonar.sources=./
 sonar.exclusions=src/**/__tests__/**,node_modules/**,coverage/**,dist/**
 
 sonar.tests=src/
