try to sink up sonar coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./
-sonar.exclusions=src/**/__tests__/**,node_modules/**,coverage/**,dist/**,__tests__/**,vite.config.ts,./**/*.js
+sonar.exclusions=src/**/__tests__/**,node_modules/**,coverage/**,dist/**,__tests__/**,vite.config.ts,src/cli/cli.js
 
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.spec.ts
